Fix overflow-x

--- a/styles/global.css
+++ b/styles/global.css
@@ -46,6 +46,7 @@ html {
   line-height: 1.6;
   color: var(--text-color-primary);
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
